rar2fs ChangeLog file.

2013-04-12  Hans Beckerus <hans.beckerus@gmail.com>

        * Replaced the deprecated AM_CONFIG_HEADER with
          AC_CONFIG_HEADERS in configure.ac

2013-03-17  Hans Beckerus <hans.beckerus@gmail.com>

        * Second try to correct the Makefile.am error as reported
          in issue #12.

2013-03-13  Hans Beckerus <hans.beckerus@gmail.com>

        * Added an uninstall hook in Makefile.am to make sure
          also the mount helper/script is removed when doing
          "make uninstall".

2013-03-13  Hans Beckerus <hans.beckerus@gmail.com>

        * Corrected an error in the install hook in Makefile.am.
          This should resolve issue #12.

2013-03-12  Hans Beckerus <hans.beckerus@gmail.com>

        * Improved the file extension matching that is now
          less case sensitive.

2013-03-02  Hans Beckerus <hans.beckerus@gmail.com>

        * Fixed an issue with some archives that contained
          digits in the name were incorrectly identified as
          being part of a volume.

2013-02-23  Hans Beckerus <hans.beckerus@gmail.com>

        * Released 1.16.0

2013-02-17  Hans Beckerus <hans.beckerus@gmail.com>

        * Added option '--flat-only' that replaces the now 
          obsoleted option '--seek-depth=n'
          rar2fs(1) man page updated accordingly.

2013-02-16  Hans Beckerus <hans.beckerus@gmail.com>

        * Fixed a problem with some options not being possible
          to change if initially assigned a default value.

        * Changed to use a fixed file count for '--preopen-img'
          in combination with old style volume naming convention.

2013-02-08  Hans Beckerus <hans.beckerus@gmail.com>

        * Added option '--no-expand-cbr' that can be used
          to disable support for comic book archives.
          rar2fs(1) man page updated accordingly.

        * Removed option '--no-idx-mmap'. 
          rar2fs(1) man page updated accordingly.

2013-02-08  Hans Beckerus <hans.beckerus@gmail.com>
