@@ -31,6 +31,6 @@
 
 #define RAR2FS_MAJOR_VER   1
 #define RAR2FS_MINOR_VER   16
-#define RAR2FS_PATCH_LVL   3
+#define RAR2FS_PATCH_LVL   4
 
 #endif
