@@ -2,6 +2,13 @@ rar2fs ChangeLog file.
 
 2013-04-12  Hans Beckerus <hans.beckerus@gmail.com>
 
+        * Added extraction of git commit hash when cloned
+          from github.com (requires autoreconf)
+        
+        * Split of FUSE functions 
+
+2013-04-12  Hans Beckerus <hans.beckerus@gmail.com>
+
         * Replaced the deprecated AM_CONFIG_HEADER with
           AC_CONFIG_HEADERS in configure.ac
 
